# rust-lightweight-course-blog

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  EXAMPLES.md  LOGGING.md  README.md  demo.md  docker-compose.yml  test_api.sh  test_logging.sh  test_mongodb.sh
src/: logging.rs  main.rs
src/courses/application/: mod.rs
src/courses/application/command/: mod.rs
src/courses/application/command/add_pill/: add_pill_to_course_command.rs  (+2 more)
src/courses/application/query/: find_all_courses_query_handler.rs  find_course_query_handler.rs  find_course_with_pills_query_handler.rs  mod.rs
src/courses/domain/: course.rs  course_repository.rs  mod.rs
src/courses/infrastructure/: in_memory_course_repository.rs  mod.rs
src/courses/infrastructure/controllers/: add_pill_to_course_controller.rs  create_course_controller.rs  find_all_courses_controller.rs  find_course_controller.rs  find_course_with_pills_controller.rs  mod.rs
src/courses/infrastructure/persistence/: mod.rs  mongodb_repository.rs
src/database/: error.rs  indexes.rs  mod.rs
src/health/: mod.rs
src/pills/application/: find.rs  mod.rs
src/pills/application/command/: mod.rs
src/pills/application/query/: find.rs  find_all_pills_query_handler.rs  find_pill_query_handler.rs  mod.rs
src/pills/domain/: mod.rs  pill.rs  pills_repository.rs
src/pills/infrastructure/: mod.rs
src/pills/infrastructure/controllers/: create_pill_controller.rs  find_all_pills_controller.rs  find_pill_controller.rs  mod.rs
src/pills/infrastructure/persistense/: in_memory_repository.rs  mod.rs  mongodb_repository.rs
(+6 files in other folders)
