[package]
name = "rust_ai_pills_blog"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
thiserror = "1.0.61"
async-trait = "0.1.80"
